--- a/src/TodoIcon/TodoIcon.css
+++ b/src/TodoIcon/TodoIcon.css
@@ -5,12 +5,13 @@
   align-items: center;
   height: 48px;
   width: 48px;
-  /* background-color: #CCC; */
 }
+
 .Icon-container--check {
   position: absolute;
   left: 12px;
 }
+
 .Icon-container--delete {
   position: absolute;
   top: -24px;
@@ -20,11 +21,14 @@
 .Icon-svg {
   width: 24px;
   height: 24px;
-  transition: fill .15s;
+  transition: fill 0.2s ease-in-out; /* Suaviza el cambio de color */
 }
+
+/* Elimina reglas que sobrescriben el color */
 .Icon-container:hover .Icon-svg--check {
-  fill: #4caf50;
+  fill: inherit; /* Permite que React maneje el color */
 }
+
 .Icon-container:hover .Icon-svg--delete {
-  fill: red;
+  fill: inherit; /* Igual para el ícono de eliminar */
 }
